tests/analyze/record-misspelled-field/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Field `namee` does not exist in record of type `{age: int, name: string}`.
> 4 | 	me.namee
       ^^

